--- a/app/sass/common/_navpanel.scss
+++ b/app/sass/common/_navpanel.scss
@@ -1,13 +1,13 @@
 .navpanel {
     opacity: 0;
-    transform: translateX(100%);
+    overflow: hidden;
     position: absolute;
     display: flex;
     flex-direction: column;
     gap: 2rem;
     z-index: 4;
     height: 100%;
-    min-width: 15.875rem;
+    width: 15.875rem;
     background-color: rgba($color: #000, $alpha: .3); //fallback
     margin-left: auto;
     right: 0;
